[package]
name = "skin-booster"
version = "0.1.0"
authors = ["MARCEL <16888873+1337MARCEL@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = "1.0.8"
reqwest = { version = "0.11", features = ["blocking"] }
sysinfo = { version = "0.15.9" }
